k8s/apps/rclone-watch/radio/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`rclone.starry.blue`) && PathPrefix(`/radio`)
      services:
        - name: service
          port: 5572
      middlewares:
        - name: headers-rclone-watch-radio

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-rclone-watch-radio

spec:
  headers:
    customRequestHeaders:
      # intended; not insecure
      Authorization: Basic dXNlcjpwYXNz
